2011-10-18  Dirk Pranke  <dpranke@chromium.org>

        fix baseline for fast/history/history-back-twice-with-subframes-assert.html
        https://bugs.webkit.org/show_bug.cgi?id=70393

        Reviewed by James Robinson.

        the baseline added in r97821 appears to have had a couple of
        extra lines in it.

        * fast/history/history-back-twice-with-subframes-assert-expected.txt:

2011-10-18  Dirk Pranke  <dpranke@chromium.org>

        Update chromium leopard cg baseline.

        Unreviewed, baseline update.

        * platform/chromium-cg-mac-leopard/fullscreen/full-screen-remove-ancestor-after-expected.png: Added.

2011-10-18  Anders Carlsson  <andersca@apple.com>

        Assertion failure when going back in page with navigated subframes
        https://bugs.webkit.org/show_bug.cgi?id=70389
        <rdar://problem/8988444>

        Reviewed by Darin Adler.

        * fast/history/history-back-twice-with-subframes-assert-expected.txt: Added.
        * fast/history/history-back-twice-with-subframes-assert.html: Added.

2011-10-18  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r97765.
        http://trac.webkit.org/changeset/97765
        https://bugs.webkit.org/show_bug.cgi?id=70388

        "broke webkit_unit_tests, http/tests/xmlhttprequest
        /xmlhttprequest-test-send-flag.html on linux debug" (Requested
        by dpranke on #webkit).

        * http/tests/inspector/network/network-content-replacement-xhr-expected.txt:

2011-10-18  Dirk Pranke  <dpranke@chromium.org>

        Mark storage/domstorage/events/documentURI as a flaky crash
        https://bugs.webkit.org/show_bug.cgi?id=70386

        Unreviewed, expectations change.

        on chromium snowleopard.

        * platform/chromium/test_expectations.txt:

2011-10-18  Dirk Pranke  <dpranke@chromium.org>

        Add a new chromium baseline for fast/multicol/vertical-rl/rule-style.html.

        Unreviewed, baseline update.
