@@ -1,5 +1,15 @@
 description("Tests for Date.toISOString");
 
+function throwsRangeError(str)
+{
+    try {
+        eval(str);
+    } catch (e) {
+        return e instanceof RangeError;
+    }
+    return false;
+}
+
 shouldThrow("Date.toISOString.call({})");
 shouldThrow("Date.toISOString.call(0)");
 
@@ -10,6 +20,6 @@ shouldBe("new Date('1 January 4000 UTC').toISOString()", "'4000-01-01T00:00:00.0
 shouldBe("new Date('1 January 100000 UTC').toISOString()", "'+100000-01-01T00:00:00.000Z'");
 shouldBe("new Date('1 January -1 UTC').toISOString()", "'-000001-01-01T00:00:00.000Z'");
 shouldBe("new Date('10 March 2000 UTC').toISOString()", "'2000-03-10T00:00:00.000Z'");
-shouldBe("new Date(NaN).toISOString()", "'Invalid Date'");
+shouldBeTrue('throwsRangeError("new Date(NaN).toISOString()")');
 
 successfullyParsed = true;
